[tool.poetry]
name = "kuro"
version = "0.0.3"
description = "Run Black (Python code formatter) only on Git unstaged/untracked files"
authors = ["André Madeira Cortes <amadeiracortes@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/BamBalaam/kuro"

[tool.poetry.dependencies]
python = "^3.6"
black = "18.9b0"
click = "7.*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
kuro = "kuro:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
